--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@
     <script src="vendors/js/jquery-3.4.0.js"></script>
     <script src="vendors/js/jquery.waypoints.min.js"></script>
     <script src="resources/js/main.js"></script>
+        <script src="resources/js/navigation.js"></script>
     </body>
     
 </html>
